--- a/index.html
+++ b/index.html
@@ -18,17 +18,42 @@
 </nav>
 
 <div class="slider">
-  <section class="slide"><img src="images/work-01.jpg" /></section>
-  <section class="slide"><img src="images/work-02.jpg" /></section>
-  <section class="slide"><img src="images/work-03.jpg" /></section>
-  <section class="slide"><img src="images/work-04.jpg" /></section>
+
+  <!-- HERO LOGO -->
+  <section class="slide logo ivory hero">
+    <img src="images/logo-salted-mill.webp" alt="Salted Mill" />
+  </section>
+
+  <!-- WEB / SCREENSHOT -->
+  <section class="slide work">
+    <img src="images/work-01.jpg" alt="Website project" />
+  </section>
+
+  <!-- MEDIUM LOGO -->
+  <section class="slide logo stone md">
+    <img src="images/logo-fire-tigers.webp" alt="Fire Tigers" />
+  </section>
+
+  <!-- STANDARD LOGO -->
+  <section class="slide logo ivory sm">
+    <img src="images/logo-4-seasons.webp" alt="4 Seasons Finishing" />
+  </section>
+
+  <!-- HERO TEXTURE LOGO -->
+  <section class="slide logo texture hero">
+    <img src="images/logo-helm.webp" alt="Helm Maritime" />
+  </section>
+
+  <!-- CONTACT -->
   <section class="slide contact">
     <div>
       <h1>Available for select projects</h1>
       <p>hello@studio.com</p>
     </div>
   </section>
+
 </div>
+
 
 <script src="script.js"></script>
 </body>
